--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<p>Double-click to edit a todo</p>
 			<p>Created by <a href="http://github.com/petehunt/">petehunt</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-			<h1> This is Version 2 of the Todos App </h1> 
+			<h1> This is Version 4444 the Todos App </h1> 
 		</footer>
 		
 		
